app/globals.css
@import "tailwindcss";

@theme {
  --font-pretendard: var(--font-family-pretendard);
  --font-roboto: var(--font-family-roboto);
  --spacing-content: var(--width-content);
  --spacing-limit: var(--width-limit);
}

@layer base {
  :root {
    --width-content: 960px;
    --width-limit: 360px;
  }

  html {
    @apply font-pretendard cursor-default font-light text-gray-950;
  }

  code {
    @apply font-roboto text-gray-900;
  }
}

/* notion prettier */
.notion {
  @apply font-pretendard py-5;
}

.notion-page {
  @apply w-full px-0;
}

.notion-collection-page-properties {
  @apply hidden;
}

.notion-h1 {
  @apply mt-12 text-2xl font-black;
}

.notion-h2 {
  @apply mt-6 text-xl font-extrabold;
}

.notion-h {
  @apply mb-1;
}

.notion-quote {
  @apply text-sm leading-6 font-light;
}

.notion-text {
  @apply my-1 text-sm leading-6 text-pretty;
}

.notion-list,
.notion-to-do,
.notion-toggle > summary {
  @apply text-sm leading-6;
}

.notion-list li {
  padding: 3px 0;
}

.notion-property-checkbox-checked {
  @apply bg-black;
}

.notion b {
  @apply font-bold;
}

.notion-inline-code {
  @apply font-roboto bg-gray-100 px-1 py-px font-medium text-black;
}

.notion-code {
  @apply min-h-16 rounded-none bg-gray-100 text-sm leading-6 font-light hover:cursor-text;
}

.notion-hash-link {
  @apply float-right mt-1.5 ml-1;
}

.notion-list-disc {
  padding-inline-start: 20px;
}

/* code prettier */
.comment {
  @apply text-gray-500;
}

.parameter {
  @apply text-gray-500 italic;
}

.keyword,
.boolean {
  @apply text-purple-600;
}

.module {
  @apply text-red-600 italic;
}

.function {
  @apply text-blue-600;
}

.string {
  @apply text-green-600;
}

.property,
.number {
  @apply text-orange-400;
}

